--- a/views/about.html
+++ b/views/about.html
@@ -43,7 +43,7 @@
         <section class="main col-md-9">
           <article>
           <h2>About</h2>
-          <p>Hello, I am Shrey Patel. For the back end site, I'm honing my web coding skills. This is part of my college assignment. I love to do coding and play with different types of coding languages. Currently, I am studying C++, Java script, and database management (SQL) in my course program.</p>
+          <p>Hello, I am Shrey Patel. This is part of my college assignment. For the back end site, I'm honing my web coding skills. I love to do coding and play with different types of coding languages. Currently, I am studying C++, Java script, and database management (SQL) in my course program.</p>
           <p>Website coding is a passion of mine and it's amazing how a few lines of code can create something visually appealing and functional. I love the creative process of designing a website, from the layout and color scheme to the user experience and functionality. It is truly a form of art and a way for me to express myself.</p>
           <p>The satisfaction I get from debugging and fixing a problem is unmatched. Every time I solve an issue or complete a task, I feel a sense of accomplishment and pride in my work. The process of coding requires critical thinking and problem-solving skills, and I find it both challenging and rewarding.</p>
           <p>Furthermore, I appreciate the versatility of website coding. The internet is constantly growing and evolving, and with it, the possibilities for website design and functionality. I am always learning and discovering new techniques and technologies, which keeps the field exciting and never dull.</p>
