--- a/views/blog.hbs
+++ b/views/blog.hbs
@@ -1,39 +1,40 @@
 <div class="row">
-  {{#if data.post}}
     <section class="main col-md-9">
-      <article>
-        <h2>{{data.post.title}}</h2>
-        <img src="{{data.post.featureImage}}" alt="feature Image" style="width:100%" />
-        <br /><br />
-        {{#safeHTML data.post.body}}{{/safeHTML}}
-        <br /><br />
-        <strong>Category:</strong> {{data.post.category}}<br />
-        <strong>Last Updated:</strong> {{data.post.postdate}}
-      </article>
+        {{#if data.post}}
+        <article>
+            <h2>{{data.post.title}}</h2>
+            <img src={{data.post.featureImage}} alt="feature Image" style="width:100%" />
+            <br /><br />
+            {{#safeHTML data.post.body}}
+            {{/safeHTML}}
+            <br /><br />
+            <strong>Category:</strong> {{data.post.category}}<br />
+            <strong>Last Updated:</strong> {{data.post.postDate}}
+        </article>
+        {{else}}
+        <div class="col-md-12 text-center">
+            <h2>{{data.message}}</h2>
+            <p>Please try another Post / Category</p>
+        </div>
+        {{/if}}
     </section>
-  {{else}}
-    <div class="col-md-12 text-center">
-      <h2>{{data.message}}</h2>
-      <p>Oops!! Please Enter Valid Post / Categories</p>
-    </div>
-  {{/if}}
-  <aside class="col-md-3">
-    <br /><br />
-    {{#if data.posts}}
-      <h4>Posts</h4>
-      <ul class="list-group">
-        {{#each data.posts}}
-          <a href="/blog/{{this.id}}?category={{../viewingCategory}}" class="list-group-item">{{this.title}}</a>
-        {{/each}}
-      </ul>
-    {{/if}}
-    {{#if data.categories}}
-      <h4>Categories</h4>
-      <ul class="list-group">
-        {{#each data.categories}}
-          <a href="/blog?category={{this.id}}" class="list-group-item">{{this.name}}</a>
-        {{/each}}
-      </ul>
-    {{/if}}
-  </aside>
+    <aside class="col-md-3">
+        <br /><br />
+        {{#if data.posts}}
+            <h4>Posts</h4>
+            <ul class="list-group">
+            {{#each data.posts}}
+                <a href="/blog/{{id}}?category={{../viewingCategory}}" class="list-group-item">{{title}}</a>
+            {{/each}}
+            </ul>
+        {{/if}}
+        {{#if data.categories}}
+    <h4>Categories</h4>
+    {{#each data.categories}}
+    <ul class="list-group">
+        <a href="/blog?category={{id}}" class="list-group-item">{{category}}</a>   
+    {{/each}}
+    </ul>
+{{/if}}
+    </aside>
 </div>
