--- a/views/posts.hbs
+++ b/views/posts.hbs
@@ -1,39 +1,35 @@
 <div class="row">
-  <div class="col-md-12">
-    {{#unless posts}}
-      <div class="col-md-12 text-center"> <strong>{{message}}</strong> </div>
-    {{/unless}}
-    <h2>Posts</h2>
-    <hr />
-    <div class="table-responsive">
-      <table class="table">
-        <thead>
-          <tr>
-            <th>PostID</th>
-            <th>Title</th>
-            <th>PostDate</th>
-            <th>Category</th>
-            <th>Published</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each posts}}
-            <tr>
-              <td>{{this.id}}</td>
-              <td>{{this.title}}</td>
-              <td>{{this.postDate}}</td>
-              <td><a href="/posts?category={{this.category}}">{{this.category}}</a></td>
-              <td>{{this.published}}</td>
-            </tr>
-              <tr>
-      <td colspan="5"><hr></td>
-    </tr>
-          {{/each}}
-        </tbody>
-      </table>
-      {{#if message}}
-        <p>{{message}}</p>
-      {{/if}}
+    <div class="col-md-12">
+        <h2>Posts</h2>
+        <hr />
+        <div class="table-responsive">
+            <table class = "table">
+                <thead>
+                    <tr>
+                        <th>Post ID</th>
+                        <th>Title</th>
+                        <th>Post Date</th>
+                        <th>Category</th>
+                        <th>Published</th>
+                    </tr>
+                </thead>                
+                <tbody>
+                    {{#each posts}}
+                        <tr>
+                            <td>{{id}}</td>
+                            <td>{{title}}</td>
+                            <td>{{postDate}}</td>
+                            <td><a href = "/posts?category={{category}}">{{category}}</a></td>
+                            <td>{{published}}</td>
+                        </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
+        {{#unless posts}}
+        <div class="col-md-12 text-center">
+            <strong>{{message}}</strong>
+        </div>
+        {{/unless}}
     </div>
-  </div>
 </div>
