--- a/views/404.hbs
+++ b/views/404.hbs
@@ -7,19 +7,19 @@
     <title>Oops! 404</title>
     <style>
       body {
-        background: url('https://source.unsplash.com/random') no-repeat center center fixed;
-        background-size: cover;
-        font-family: sans-serif;
-        font-size: 1.5rem;
-        line-height: 1.5;
-        color: #000000;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        padding: 0 2rem;
-      }
+  background: url('https://picsum.photos/1920/1080') no-repeat center center fixed;
+  background-size: cover;
+  font-family: sans-serif;
+  font-size: 1.5rem;
+  line-height: 1.5;
+  color: #000000;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  padding: 0 2rem;
+}
 
       .container {
         max-width: 800px;
